--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.29.3",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
+    "nanoid": "^4.0.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
