--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.2",
+    "bson-objectid": "^2.0.4",
     "date-fns": "^2.29.3",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
